// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Modal /> should render 1`] = `
<div>
  <div
    class="modal"
  >
    Éxito
    <span>
      Success
    </span>
    <button
      data-testid="data-testid-button-closer-modal"
    />
  </div>
</div>
`;

exports[`<Modal /> should render 2`] = `
<div>
  <div
    class="modal"
  >
    Fracaso
    <span>
      Fail
    </span>
    <button
      data-testid="data-testid-button-closer-modal"
    />
  </div>
</div>
`;
